add config for auth and servers
